# Grok-Api

./: CLAUDE.md  pyproject.toml
core/: grok.py
core/mappings/: grok.json  txid.json
core/reverse/: parser.py
